# think-inside-the-box

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: commands.py  dummy_manager.py  game.py  manager.py
src/GameObjects/: game_objects.py  object_representation.json  pyproject.toml  render_game_objects.py  room_templates.json
src/res/: questions.json
src/sections/: base.py  bootstrap.py  debug.py  game_over.py  menu.py  over_world.py  question.py
src/util/: maze.py  question.py
