[tool.poetry]
name = "gameobjects"
version = "0.0.2"
description = "Holds classes and objects for use in-game"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
blessed = "^1.18.1"

[tool.poetry.dev-dependencies]
blessed = "^1.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
